added a pause to the enumeration to prevent hitting API threshold limits TODO: rework the whole way were are pulling tags, this doesnt work now that we have lots and lots of volumes

--- a/config/sample.config.yaml
+++ b/config/sample.config.yaml
@@ -5,3 +5,4 @@ aws:
   volume_tag : 'Snapper' # tag to use in AWS for the EBS backup flags
   retain : '10.days'
 log_to: '/var/log/ebs_snapper.log'
+pause_time: 1
